--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -64,70 +64,70 @@
 
 
 
-// .header-contacts {
-//     display: flex;
-//     list-style: none;
-//     align-items: center;
-//     fill: $primary-text-color;
+.header-contacts {
+    display: none;
+    list-style: none;
+    align-items: center;
+    fill: $primary-text-color;
     
-//     margin-top: 0px;
-//     margin-bottom: 0px;
-//     padding-left: 0px;
-//   }
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-left: 0px;
+  }
   
-//   .mail__link,
-//   .tel__link {
-//     color: $primary-text-color;
+  .mail__link,
+  .tel__link {
+    color: $primary-text-color;
   
-//     font-weight: 500;
-//     font-size: 14px;
-//     line-height: 1.14px;
-//     letter-spacing: 0.02em;
-//     text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14px;
+    letter-spacing: 0.02em;
+    text-decoration: none;
     
   
-//     display: flex;
-//     align-items: center;
+    display: flex;
+    align-items: center;
   
-//     padding-top: 32px;
-//     padding-bottom: 32px;
+    padding-top: 32px;
+    padding-bottom: 32px;
   
-//     transition-property: color;
-//     transition-duration: 250ms;
-//     transition-timing-function: $timing-function;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: $timing-function;
 
-//     &:hover,
-//     &:focus {
-//         color: $accent-color;
-//     }
+    &:hover,
+    &:focus {
+        color: $accent-color;
+    }
 
-//     &__icon:focus,
-//     &__icon:hover {
-//         fill: currentColor;
-//     }
-//   }
+    &__icon:focus,
+    &__icon:hover {
+        fill: currentColor;
+    }
+  }
   
-//   .mail {
-//     margin-right: 30px;
-//   }
+  .mail {
+    margin-right: 30px;
+  }
   
-//   .mail__icon {
-//     margin-right: 10px;
-//     fill: currentColor;
-//    }
+  .mail__icon {
+    margin-right: 10px;
+    fill: currentColor;
+   }
    
-//    .tel__icon {
-//      margin-right: 10px;
-//      fill: currentColor;
-//    }
+   .tel__icon {
+     margin-right: 10px;
+     fill: currentColor;
+   }
   
-//   .header {
-//     border: 1px solid $header-border-color;
-//   }
+  .header {
+    border: 1px solid $header-border-color;
+  }
   
-//   .contacts {
-//     margin-left: auto;
-//   }
+  .contacts {
+    margin-left: auto;
+  }
 
 //   .footer__list {
 //     margin-top: 0px;
