--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -19,10 +19,10 @@
 
 
 
-//  .page__container {
-//    display: flex;
-//   justify-content: space-between;
-//  }
+ .page__container {
+   display: flex;
+  justify-content: space-between;
+ }
 
  .footer__container {
    @media screen and (min-width: 1200px) {
