--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,6 +14,7 @@
     font-size: 16px;
   }
   
+
   .list {
     list-style: none;
   } 
@@ -28,3 +29,7 @@
   height: auto;
 }
 
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
