--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -7,15 +7,15 @@
 //     background-color: rgba(0, 0, 0, 0.2);
 //   }
   
-//   .backdrop.is-hidden {
-//     opacity: 0;
-//     pointer-events: none;
-//     visibility: hidden;
-//     transition-timing-function: $timing-function;
-//     transition-duration: $transition-duration;
+  .backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+    transition-timing-function: $timing-function;
+    transition-duration: $transition-duration;
 
-//     & .modal {
-//       transform: translate(-50%, -50%) scale(0.7);
-//     }
-//   }
+    & .modal {
+      transform: translate(-50%, -50%) scale(0.7);
+    }
+  }
   
