--- a/sass/components/_main-nav.scss
+++ b/sass/components/_main-nav.scss
@@ -1,64 +1,64 @@
 
-//   .header__site-nav {
+  .header__site-nav {
   
-//     display: flex;
+    display: none;
     
-//     margin-left: 93px;
-//     margin-top: 0px;
-//     margin-bottom: 0px;
-//     padding-left: 0px;
+    margin-left: 93px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-left: 0px;
   
-//     list-style: none;
-//   }
+    list-style: none;
+  }
 
-//   .site-nav__link {
+  .site-nav__link {
 
-//     position: relative;
-//     transition-property: color;
-//     transition-duration: $transition-duration;
-//     transition-timing-function: $timing-function;
+    position: relative;
+    transition-property: color;
+    transition-duration: $transition-duration;
+    transition-timing-function: $timing-function;
   
-//     display: block;
-//     padding-top: 32px;
-//     padding-bottom: 32px;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
   
-//     color: $title-text-color;
+    color: $title-text-color;
   
-//     font-weight: 500;
-//     font-size: 14px;
-//     line-height: 1.14;
-//     letter-spacing: 0.02em;
-//     text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
 
-//     &:hover, 
-//     &:focus {
-//       color: $accent-color;
-//     }
-//   }
+    &:hover, 
+    &:focus {
+      color: $accent-color;
+    }
+  }
 
-//   .site-nav__link.curent {
-//     color: $accent-color;
+  .site-nav__link.curent {
+    color: $accent-color;
 
-//     &::after {
+    &::after {
 
-//       content: '';
-//       display: block;
-//       background-color: $accent-color;
-//       width: 100%;
-//       height: 4px;
-//       border-radius: 2px;
+      content: '';
+      display: block;
+      background-color: $accent-color;
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
     
-//       position: absolute;
-//       left: 0px;
-//       bottom: -2px;
-//     }
-//   }
+      position: absolute;
+      left: 0px;
+      bottom: -2px;
+    }
+  }
 
-// .site-nav__item:not(:last-child) {
-//   margin-right: 50px;
-// }
+.site-nav__item:not(:last-child) {
+  margin-right: 50px;
+}
 
-// .header__main-nav {
-//   display: flex;
-//   align-items: center;
-// }
+.header__main-nav {
+  display: flex;
+  align-items: center;
+}
