--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 
 @import "./utils/variables";
+@import "./components/mobile-menu";
 @import "./base/base";
 @import "./components/logo";
 @import "./components/main-nav";
