--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -68,7 +68,100 @@
           margin-left: 10px;
         }
       }
+
+      .portfolio__button-list {
+        display: flex;
+        // justify-content: center;
       
+        list-style: none;
+        margin-top: 0px;
+        margin-bottom: 50px;
+        padding-left: 0px;
+        padding-right: 0px;
+
+        @media screen and (min-width: 320px) and (max-width: 767px) {
+          flex-wrap: wrap;
+      }
+      
+      .portfolio__button-item:not(:last-child) {
+        margin-right: 8px;
+      }
+
+      .portfolio__button-item {
+        @media screen and (min-width: 320px) and (max-width: 767px) {
+          margin-bottom: 15px;
+          &:nth-last-child(-n + 2) {
+            margin-bottom: 0px;}
+        }
+      }
+      @media screen and (min-width: 768px) {
+        justify-content: center;
+      }
+      }
+
+
+    .portfolio__button-link {
+    color: $title-text-color;
+    cursor: pointer;
+    background-color: $secondary-background-color;
+  
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+  
+    border-radius: 4px;
+    padding-left: 22px;
+    padding-right: 22px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+  
+    border: none;
+  
+    transition-property: background-color, color, box-shadow;
+    transition-duration: $transition-duration;
+    transition-timing-function: $timing-function;
+
+    &:hover,
+    &:focus {
+        color: $hero-title-color;
+        background-color: $accent-color;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+        border-radius: 4px; 
+    }
+
+    &.curent {
+        color: $hero-title-color;
+        background-color: $accent-color;
+      }
+    }
+
+    .form__button--close {
+              transition-property: fill;
+              transition-duration: $timing-function;
+              animation-timing-function: $timing-function;
+            
+              position: absolute;
+              top: 8px;
+              right: 8px;
+            
+              cursor: pointer;
+            
+              margin: 0px;
+              padding: 0px;
+              width: 30px;
+              height: 30px;
+              border-radius: 50%;
+              background-color: $hero-title-color;
+              border: 1px solid rgba(0, 0, 0, 0.1);
+          
+              &:hover,
+              &:focus {
+                  fill: $accent-color;
+              }
+            }
 
       
 
@@ -220,4 +313,4 @@
       
 //       .portfolio__button-item:not(:last-child) {
 //         margin-right: 8px;
-//       }
+      // }
