--- a/sass/components/_form-comment.scss
+++ b/sass/components/_form-comment.scss
@@ -1,29 +1,30 @@
-// .comment-input::placeholder {
-//     font-weight: 400;
-//     font-size: 14px;
-//     line-height: 16px;
-//     letter-spacing: 0.01em;
+.comment-input::placeholder {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.01em;
   
-//     color: rgba(117, 117, 117, 0.5);
-//   }
+    color: rgba(117, 117, 117, 0.5);
+  }
   
-//   textarea {
-//     resize: none;
-//   }
+  textarea {
+    resize: none;
+  }
   
-//   .form__comment {
+  .form__comment {
   
-//     width: 448px;
-//     height: 120px;
+    display: block;
+    max-width: 450px;
+    height: 120px;
   
-//     padding: 12px 16px;
+    padding: 12px 16px;
     
-//     border: 1px solid rgba(33, 33, 33, 0.2);
-//     box-sizing: border-box;
-//     border-radius: 4px; 
-//   }
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px; 
+  }
 
-//   .comment-input {
-//     margin-bottom: 20px;
-//   }
+  .comment-input {
+    margin-bottom: 20px;
+  }
   
