--- a/sass/components/_form-policy.scss
+++ b/sass/components/_form-policy.scss
@@ -1,4 +1,53 @@
-// .policy {
+.policy {
+    display: flex;
+    align-items: center;
+  
+    margin-top: 0px;
+    margin-bottom: 30px;
+  }
+  
+  .policy__label {
+  
+    display: flex;
+    align-items: center;
+  
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+  }
+  
+  .policy__icon {
+    margin-right: 8px;
+  
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+  
+    border-radius: 2px;
+    border: 2px solid $title-text-color;
+
+    .checkbox:checked + & {
+      background-color: $accent-color;
+      background-image: url(../images/icon\ check.svg);
+      background-size: contain;
+      background-origin: border-box;
+      border-color: var(--accent-color);
+    }
+      .checkbox:focus + & {
+        border-color: #2196f3;
+      }
+
+      .checkbox:focus + & {
+        border-color: #2196f3;
+      }
+  }
+  
+  .policy__link {
+    color: $accent-color;
+  }
+  
+
+//   .policy {
 //     display: flex;
 //     align-items: center;
   
@@ -46,6 +95,3 @@
 //   .policy__link {
 //     color: $accent-color;
 //   }
-  
-
-  
