--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,10 +8,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
-  
     padding: 40px;
-    width: 528px;
-    min-height: 581px;
+  
+    max-width: 450px;
+    height: auto;
     background-color: $hero-title-color;
   
     background: $hero-title-color;
@@ -20,3 +20,25 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
   }
+
+  // .modal {
+  //   transition-property: transform, scale;
+  //   transition-duration: $transition-duration;
+  //   animation-timing-function: $timing-function;
+  
+  //   position: absolute;
+  //   top: 50%;
+  //   left: 50%;
+  //   transform: translate(-50%, -50%) scale(1);
+  
+  //   padding: 40px;
+  //   max-width: 528px;
+  //   min-height: 581px;
+  //   background-color: $hero-title-color;
+  
+  //   background: $hero-title-color;
+  //   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+  //   0px 1px 1px rgba(0, 0, 0, 0.14),
+  //   0px 2px 1px rgba(0, 0, 0, 0.2);
+  //   border-radius: 4px;
+  // }
