--- a/sass/utils/_visualy-hidden.scss
+++ b/sass/utils/_visualy-hidden.scss
@@ -11,26 +11,26 @@ clip-path: inset(50%);
 margin: -1px;
 }
 
-// .portfolio__title {
-// position: absolute;
-// white-space: nowrap;
-// width: 1px;
-// height: 1px;
-// overflow: hidden;
-// border: 0;
-// padding: 0;
-// clip: rect(0 0 0 0);
-// clip-path: inset(50%);
-// margin: -1px;
-// }
+.portfolio__title {
+position: absolute;
+white-space: nowrap;
+width: 1px;
+height: 1px;
+overflow: hidden;
+border: 0;
+padding: 0;
+clip: rect(0 0 0 0);
+clip-path: inset(50%);
+margin: -1px;
+}
 
-// .checkbox {
-//     position: absolute;
-//     width: 1px;
-//     height: 1px;
-//     margin: -1px;
-//     border: 0;
-//     padding: 0;
-//     clip: rect(0 0 0 0);
-//     overflow: hidden;
-// }
+.checkbox {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
