--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -19,6 +19,10 @@
     0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+
+    @media screen and (min-width: 1200px) {
+      max-width: 528px;
+    }
   }
 
   // .modal {
