--- a/sass/components/_portfolio-card.scss
+++ b/sass/components/_portfolio-card.scss
@@ -7,12 +7,14 @@
         margin: 15px;
       }
 
-      @media screen and (min-width: 768px) {
+      @media screen and (min-width: 1200px) {
         width: calc(100% / 3 - 30px);
       }
   }
 
   .product-list {
+      margin-top: 0px;
+      margin-bottom: 0px;
       padding-left: 0px;
 
       @media screen and (min-width: 768px) {
@@ -143,15 +145,36 @@
   .product-list__description {
     display: flex;
     position: absolute;
+    padding-top: 49px;
+    padding-left: 24px;
+    padding-right: 24px;
   
     width: 100%;
     height: 100%;
     margin: 0;
-    padding: 63px 24px;
+
   
     font-size: 18px;
     line-height: 1.55;
     letter-spacing: 0.03em;
     color: $hero-title-color;
-    }
+
+    // @media screen and (min-width: 320px) {
+    //   padding-top: 77px;
+    //   padding-left: 24px;
+    //   padding-right: 24px;
+    // }
+
+    // @media screen and (min-width: 768px) {
+    //   padding-top: 49px;
+    //   padding-left: 24px;
+    //   padding-right: 24px;
+    // }
+
+    // @media screen and (min-width: 1200px) {
+    //   padding-top: 49px;
+    //   padding-left: 24px;
+    //   padding-right: 24px;
+    // }
+  }
   
