--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,5 +1,7 @@
 
 .hero {
+    padding-top: 118px;
+    padding-bottom: 118px;
     background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
@@ -9,6 +11,17 @@
     background-repeat: no-repeat;
     background-position: center;
     text-align: center;
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../../images/hero-background-mob-2x.jpg);
+    }
+  
+
 
     @media screen and (min-width: 767px) {
       background-image: linear-gradient(
@@ -16,7 +29,17 @@
         rgba(47, 48, 58, 0.4)
       ),
       url(../images/hero-background-tablet-1x.jpg);
-    }
+
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+          background-image: linear-gradient(
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)
+          ),
+          url(../../images/hero-background-tablet-2x.jpg);
+        }
+    
 
     @media screen and (min-width: 1199px) {
       background-image: linear-gradient(
@@ -24,12 +47,20 @@
         rgba(47, 48, 58, 0.4)
       ),
       url(../images/hero-background.jpg);
-      padding-top: 200px;
+      @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+        background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../../images/hero-background-2x.jpg);
+      }
+        padding-top: 200px;
       padding-bottom: 200px;
     }
-    
   }
-
+}
 
 
 
