--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -39,7 +39,11 @@
         0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
         background-color: $hero-title-color;
-        margin-bottom: 30px;
+        
+        &:not(:last-child) {
+          margin-bottom: 30px;
+        }
+        
 
         @media screen and (min-width: 767px) and (max-width:1199px) {
         width: calc(100% / 2 - 30px);
