--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -8,16 +8,17 @@
   text-align: center;
   letter-spacing: 0.06em;
 
+  margin-top: 0px;
   margin-left: auto;
   margin-right: auto;
   text-transform: uppercase;
 
-  @media screen and (min-width: 767px) {
+  @media screen and (min-width: 768px) {
     margin-top: 0px;
     margin-bottom: 30px;
   }
 
-  @media screen and (min-width: 1199px) {
+  @media screen and (min-width: 1200px) {
     margin-top: 0px;
     margin-bottom: 30px;
     font-size: 44px;
