--- a/css/main.css
+++ b/css/main.css
@@ -628,7 +628,7 @@
     margin: -15px;
   }
 }
-@media screen and (min-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .team__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -643,10 +643,12 @@
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
 }
-.team__item:not(:last-child) {
-  margin-bottom: 30px;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
-@media screen and (min-width: 767px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .team__item {
     width: calc(50% - 30px);
     margin: 15px;
