--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -27,7 +27,7 @@
         margin: -15px;
     }
 
-    @media screen and (min-width: 1199px) {
+    @media screen and (min-width: 1200px) {
         display: flex;
   }
 }
@@ -40,12 +40,15 @@
         border-radius: 0px 0px 4px 4px;
         background-color: $hero-title-color;
         
-        &:not(:last-child) {
-          margin-bottom: 30px;
+        @media screen and (min-width:320px) and (max-width: 767px) {
+          &:not(:last-child) {
+            margin-bottom: 30px;
+          }
         }
+      
         
 
-        @media screen and (min-width: 767px) and (max-width:1199px) {
+        @media screen and (min-width: 768px) and (max-width:1199px) {
         width: calc(100% / 2 - 30px);
         margin: 15px;
         }
@@ -85,66 +88,4 @@
       display: block;
       height: auto;
     }
-
-
-//   .team__title {
-//     margin-top: 0px;
-//     margin-bottom: 50px;
-//     text-align: center;
-  
-//     color: $title-text-color;
-  
-//     font-weight: 700;
-//     font-size: 36px;
-//     line-height: 1.16;
-//   }
-  
-//   .team__list {
-//     display: flex;
-//     justify-content: center;
-//     text-align: center;
-   
-//     margin-top: 0px;
-//     margin-bottom: 0px;
-//     padding-left: 0px;
-//   }
-  
-//   .team__item {
-//     padding-bottom: 30px;
-//     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-//     0px 1px 1px rgba(0, 0, 0, 0.14),
-//     0px 2px 1px rgba(0, 0, 0, 0.2);
-//     border-radius: 0px 0px 4px 4px;
-//     background-color: $hero-title-color;
-
-//     &:not(:last-child) {
-//         margin-right: 30px;
-//       }
-//   }
-  
-//     .team__subtitle {
-//       margin-bottom: 10px;
-//       margin-top: 0px;
-  
-//       color: $title-text-color;
-    
-//       font-weight: 500;
-//       font-size: 16px;
-//       line-height: 1.18;
-//       text-align: center;
-//       letter-spacing: 0.03em;
-//     }
-  
-//     .team__contant {
-//       font-weight: 400;
-//       font-size: 16px;
-//       line-height: 1.18;
-//       margin-top: 0px;
-//       margin-bottom: 16px;
-//     }
-  
-//     .team__pct {
-//       margin-bottom: 30px;
-//     }
-  
       
