--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@
 .is-hidden {
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
 }
 
 .mob-menu {
@@ -74,6 +75,7 @@
 .mob__menu--list {
   display: block;
   margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .mob-nav__item {
@@ -125,6 +127,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-top: 0px;
   margin-bottom: 0px;
 }
@@ -213,22 +217,20 @@
 }
 
 .site-nav__link.curent {
+  position: relative;
   color: #2196f3;
 }
-.site-nav__link.curent::after {
-  content: "";
-  display: block;
-  background-color: #2196f3;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  position: absolute;
-  left: 0px;
-  bottom: -2px;
-}
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .site-nav__link.curent::after {
-    display: none;
+    content: "";
+    display: block;
+    background-color: #2196f3;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    position: absolute;
+    left: 0px;
+    bottom: -1px;
   }
 }
 
