--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -11,26 +11,59 @@
     background-repeat: no-repeat;
     background-position: center;
     text-align: center;
-    
+    }
+
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      .hero {
+        background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/hero-background-mob-2x.jpg);
+      }
+    }
+
+    @media screen and (min-width: 768px) {
+      .hero {
+        background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/hero-background-tablet-1x.jpg);
+      
+
+      @media  (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+        background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/hero-background-tablet-2x.jpg);
+      }
+    }
+  }
+
   
-    @media screen and (min-width: 480px) {
-      background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url(../images/hero-background-tablet-1x.jpg);
-
-    
-
-    @media screen and (min-width: 1199px) {
+  @media screen and (min-width: 1200px) {
+    .hero {
       background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
       url(../images/hero-background.jpg);
+    
 
-        padding-top: 200px;
-      padding-bottom: 200px;
+    @media  (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero-background-2x.jpg);
     }
   }
 }
