--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -4,14 +4,21 @@
 
   .team__title {
     margin-top: 0px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     text-align: center;
   
     color: $title-text-color;
-  
+
     font-weight: 700;
     font-size: 28px;
     line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+  
+    @media screen and (min-width: 1200px) {
+      font-size: 36px;
+      line-height: 1.16;
+    }
   }
 
     .team__list {
