--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -44,7 +44,6 @@
 
   @media screen and (min-width: 768px) {
     display: flex;
-    justify-content: center;
     margin-left: auto;
     margin-right: auto;
     flex-wrap: wrap;
@@ -83,7 +82,7 @@
     }
 
     @media screen and (min-width: 1200px) {
-      width: calc(100% / 4 - 30px);
+      width: calc((100% - 3 * 30px) / 4);
 
       margin-bottom: 0px;
       
