--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -12,6 +12,7 @@
   
   .header {
     border: 1px solid $header-border-color;
+    display: flex;
   }
   
 
@@ -122,15 +123,30 @@
   }
 
   .mail__link {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      padding-top: 21px;
+    }
+  }
+
+  .tel__link {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      padding-bottom: 21px;
+    }
+  }
+
+  .header-contacts__item {
     @media screen and (min-width: 768px) and (max-width:1199px) {
-      margin-bottom: 10px;
+      &:not(:last-child) {
+        margin-bottom: 10px;
+      }
     }
 
     @media screen and (min-width: 1200px) {
+      &:not(:last-child) {
       margin-right: 30px;
     }
   }
-  
+}
   .mail__icon {
     margin-right: 10px;
     fill: currentColor;
