--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -47,7 +47,7 @@
         }
 
         @media screen and (min-width: 1200px) {
-          padding-right: 20px;
+          margin-right: 12px;
           margin-bottom: 0px;
         }
     }
