--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -11,6 +11,7 @@
     background-repeat: no-repeat;
     background-position: center;
     text-align: center;
+    max-width: 1600px;
     }
 
     @media (min-device-pixel-ratio: 2),
@@ -32,6 +33,7 @@
           rgba(47, 48, 58, 0.4)
         ),
         url(../images/hero-background-tablet-1x.jpg);
+
       
 
       @media  (min-device-pixel-ratio: 2),
@@ -42,6 +44,7 @@
           rgba(47, 48, 58, 0.4)
         ),
         url(../images/hero-background-tablet-2x.jpg);
+      
       }
     }
   }
@@ -56,6 +59,7 @@
         rgba(47, 48, 58, 0.4)
       ),
       url(../images/hero-background.jpg);
+      width: 100%;
     
 
     @media  (min-device-pixel-ratio: 2),
