--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -8,9 +8,9 @@
     }
   }
 
-  .benefits {
+  .feture {
     @media screen and (min-width: 1200px) {
-      padding-bottom: 0px;
+      padding-top: 0px;
     }
   }
   
