--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -120,6 +120,11 @@
       padding-top: 0px;
       padding-bottom: 0px;
     }
+
+    @media screen and (min-width: 1200px) {
+      padding-top: 32px;
+      padding-bottom: 32px;
+    }
   }
 
   .mail__link {
