--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,8 @@
   height: 100%;
   padding-top: 48px;
   padding-bottom: 48px;
+  padding-left: 40px;
+  padding-right: 40px;
   z-index: 2;
 }
 @media screen and (min-width: 768px) {
@@ -76,6 +78,7 @@
   display: block;
   margin-top: 0px;
   margin-bottom: 0px;
+  padding-left: 0px;
 }
 
 .mob-nav__item {
@@ -117,6 +120,7 @@
 .mob__contacts--list {
   margin-top: 0px;
   margin-bottom: 64px;
+  padding-left: 0px;
 }
 
 .mob__contacts--tel {
@@ -147,6 +151,10 @@
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
   margin-left: 10px;
+}
+
+.mob-nav__link.curent {
+  color: #2196f3;
 }
 
 .mobile__menu--btn {
@@ -320,6 +328,7 @@
 .hero {
   padding-top: 118px;
   padding-bottom: 118px;
+  margin: 0 auto;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-background-mob.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-background-mob.jpg);
   background-size: cover;
